refactore: altered position circle for fixed and defined z-index -1

--- a/style.css
+++ b/style.css
@@ -13,6 +13,17 @@ body {
     padding: 0;
 }
 
+.circle {
+    clip-path: circle(60rem at right 80rem);
+    background-color: #00502f;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
 .content {
     width: 100%;
     display: flex;
@@ -77,12 +88,3 @@ button:hover {
     transform: translateY(-20px);
 }
 
-.circle {
-    background-color: #00502f;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    clip-path: circle(60rem at right 80rem);
-}
